<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_frigo"
        android:icon="@drawable/frigo_dev"
        android:title="@string/title_frigo" />

    <item
        android:id="@+id/navigation_calendrier"
        android:icon="@drawable/calendrier_dev"
        android:title="@string/title_calendrier" />

    <item
        android:id="@+id/navigation_recettes"
        android:icon="@drawable/recette_dev"
        android:title="@string/title_recettes" />

    <item
        android:id="@+id/navigation_liste"
        android:icon="@drawable/liste_dev"
        android:title="@string/liste" />

    <item
        android:id="@+id/navigation_carte"
        android:icon="@drawable/carte_dev"
        android:title="@string/carte" />

</menu>