<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_frigo">

    <fragment
        android:id="@+id/navigation_frigo"
        android:name="edu.devmo.frigonnecte.ui.frigo.FrigoFragment"
        android:label="@string/title_frigo"
        tools:layout="@layout/fragment_frigo" />

    <fragment
        android:id="@+id/navigation_calendrier"
        android:name="edu.devmo.frigonnecte.ui.calendrier.CalendrierFragment"
        android:label="@string/title_calendrier"
        tools:layout="@layout/fragment_calendrier" />

    <fragment
        android:id="@+id/navigation_recettes"
        android:name="edu.devmo.frigonnecte.ui.recettes.RecettesFragment"
        android:label="@string/title_recettes"
        tools:layout="@layout/fragment_recettes" />
</navigation>