<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.calendrier.CalendrierFragment">

    <Button
        android:id="@+id/semaine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/semaine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/jours3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/_3_jours"
        app:layout_constraintEnd_toStartOf="@+id/semaine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/jours10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/_10_jours"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/semaine"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/matinJour1"
        android:layout_width="126dp"
        android:layout_height="122dp"
        android:layout_marginStart="36dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="clickImage2"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="102dp" />

    <ImageView
        android:id="@+id/matinJour2"
        android:layout_width="126dp"
        android:layout_height="122dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="clickImage"
        android:src="@drawable/plus"
        app:layout_constraintStart_toEndOf="@+id/matinJour1"
        tools:layout_editor_absoluteY="66dp" />

    <ImageView
        android:id="@+id/matinJour3"
        android:layout_width="126dp"
        android:layout_height="122dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="clickImage"
        android:src="@drawable/plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/matinJour2"
        tools:layout_editor_absoluteY="202dp" />

</androidx.constraintlayout.widget.ConstraintLayout>